--- a/custom.css
+++ b/custom.css
@@ -3,7 +3,6 @@ input,select {
 }
 
 th, td {
-    font-size: 14px;
     width: 150px;
 }
 
@@ -62,3 +61,18 @@ table {
     border-radius: 10%;
 }
 
+.result-table {
+    font-size: 20px;
+}
+
+.result-table__data {
+    width: 278px;
+}
+
+.result-table__calc {
+    font-weight: bold;
+}
+
+.input-table {
+    font-size: 14px;
+}
