refactor: case image size

--- a/custom.css
+++ b/custom.css
@@ -31,7 +31,8 @@ table {
 }
 
 .case-image {
-    width: 400px;
+    width: 33%;
+    max-height: 450px;
     margin-right: 20px;
     /* border: 2px solid gray; */
     -webkit-box-shadow: 3px 4px 17px -1px rgba(105,102,105,0.9);
